--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,11 @@
 
 .container {
   display: grid;
-  width: 500px;
-  height: 500px;
+  width: 80vw;
+  height: 80vw;
 }
-
 .grid-item {
-  padding: 1em;
-  border: 1px solid #ddd;
+  background-color: white;
+  border: 1px solid #000000;
   text-align: center;
 }
