--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,19 @@
 
 .container {
   display: grid;
-  width: 80vw;
-  height: 80vw;
+  width: 50vw;
+  height: 50vh;
   grid-template-rows: repeat(64, 1fr);
   grid-template-columns: repeat(64, 1fr);
+}
+
+.colorPalette-container {
+  display: grid;
+  width: 20vw;
+  height: 20vh;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(8, 1fr);
+
 }
 .grid-item {
   border: 1px solid #000000;
