--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 .container {
   display: grid;
   width: 80vw;
-  height: 80vw;
+  height: 80vh;
   grid-template-rows: repeat(64, 1fr);
   grid-template-columns: repeat(64, 1fr);
 }
