--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 }
 /* Selected cell will get a golden highlight */
 .chosen-item {
-  border: 1px solid gold;
+  border: 1px solid rgb(138, 40, 150);
   box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
   position: relative;
   z-index: 1000;
