--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: "Press Start 2P" !important;
 }
 
 .logo {
@@ -50,13 +51,25 @@
   grid-template-columns: repeat(64, 1fr);
 }
 
+.colorPalette-frame {
+  background-color: gainsboro;
+  width: 6vw;
+  height: 24vw;
+}
+#test {
+  width: 9vw;
+  height: 30vw;
+  font-family: "Press Start 2P" !important;
+}
 .colorPalette-container {
   display: grid;
-  width: 20vw;
-  height: 20vh;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(8, 1fr);
-
+  width: 5vw;
+  height: 20vw;
+  grid-template-rows: repeat(8, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  margin-left: 0.5vw;
+  padding-top: 1vw;
+  font-family: "Press Start 2P" !important;
 }
 
 /* A regular cell of the matrix grid */
