--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,28 @@
   text-align: center;
   font-family: "Press Start 2P" !important;
 }
+body {
+  background-color: darkslategrey; 
+}
+
+.top-bar {
+  position: fixed;
+  width: 100%;
+  height: 15vh;
+  left: 0;
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.main-components {
+  padding-top: 13vh;
+}
+
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  text-align: left;
+  top:0;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
