--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+:root {
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
@@ -84,6 +84,6 @@
     z-index: 1000;
 }
 
-.submit-btn {
+.txt-btn {
     font-family: "Press Start 2P" !important;
 }
