--- a/src/App.css
+++ b/src/App.css
@@ -6,33 +6,44 @@
     font-family: "Press Start 2P" !important;
 }
 body {
-  background-color: darkslategrey; 
+  background-color: rgb(61, 0, 46); 
 }
 
 .top-bar {
   position: fixed;
   width: 100%;
-  height: 20vh;
+  height: 12vh;
   left: 0;
   top: 0;
-  background-color: rgba(57, 57, 57, 0.835);
+  background-color: rgba(102, 102, 102, 0.476);
+  z-index: 2;
 }
 .main-components {
   padding-top: 20vh;
 }
+.login-btn {
+    float: right;
+    padding:4vh 0;
+    margin-right: 2vw;
+ 
+}
+.tutorial-btn {
+    float: left;
+    padding:4vh 0;
+    margin-left: 2vw;
+}
+.logo img {
+    margin-top: 2vh;
+    width: 8vh;
+    height: 8vh;
 
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
 }
 
 .logo:hover {
-    filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #ef63c7aa);
 }
 .logo.react:hover {
-    filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #e747d5aa);
 }
 
 @keyframes logo-spin {
@@ -89,7 +100,7 @@ body {
     border: 1px solid rgb(138, 40, 150);
     box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
     position: relative;
-    z-index: 1000;
+    z-index: 1;
 }
 
 .txt-btn {
