--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 :root {
     max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
     font-family: "Press Start 2P" !important;
 }
@@ -32,7 +31,7 @@ body {
   z-index: 2;
 }
 .main-components {
-  padding-top: 20vh;
+  padding-top: 6vh;
 }
 .login-btn {
     float: right;
@@ -80,19 +79,35 @@ body {
     }
 }
 
+.main {
+    margin-left: 5vw;
+}
+
 /* Matrix grid, please do not change height units */
+.grid {
+    float: left;
+    width: 88vh;
+    height: 88vh;
+    margin-left: 5vw;
+}
 .container {
     display: grid;
-    width: 80vw;
-    height: 80vw;
     grid-template-rows: repeat(64, 1fr);
     grid-template-columns: repeat(64, 1fr);
+    width: 85vh;
+    height: 85vh;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Colour palette */
 .colorPalette {
+    float: right;
+    margin-top: 10vw;
+    margin-right: 20vw;
     width: 8vw;
     height: 30vw;
+    z-index: 2;
 }
 .colorPalette .title-bar {
     text-align: left;
@@ -105,12 +120,14 @@ body {
     height: 20vw;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1vw;
+    margin-top: 2vw;
     margin-bottom: 1vw;
-    z-index: 2;
 }
 .colorPalette-container .grid-item {
     border: 0.1vw solid #000000;
+}
+.colorPalette button {
+    margin-bottom: 1vw;
 }
 #submit-icon {
     height: 2.3vh;
@@ -118,7 +135,7 @@ body {
 
 /* A regular cell of the matrix grid */
 .grid-item {
-    border: 1px solid #000000;
+    border: 0.1vw solid #000000;
 }
 /* Selected cell will get a golden highlight */
 .chosen-item {
