--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,18 @@
     text-align: center;
     font-family: "Press Start 2P" !important;
 }
+html {
+    margin: 0;
+    min-height: 100%;
+}
 body {
-  background-color: rgb(61, 0, 46); 
+    background-image: url("assets/sky.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    background-color: rgb(61, 0, 46); 
+    margin: 0;
+    min-height: 100%;
 }
 
 .window {
