--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     font-family: "Press Start 2P" !important;
 }
 body {
-  background-color: rgb(61, 0, 46); 
+    background-color: rgb(61, 0, 46);
 }
 
 .window {
@@ -15,47 +15,40 @@ body {
 }
 /* Pink gradient for the window titles */
 .title-bar {
-    background: linear-gradient(
-        90deg,
-        #d929b8,
-        #f79ee7
-    );
+    background: linear-gradient(90deg, #d929b8, #f79ee7);
 }
 
 .top-bar {
-  position: fixed;
-  width: 100%;
-  height: 12vh;
-  left: 0;
-  top: 0;
-  background-color: rgba(102, 102, 102, 0.476);
-  z-index: 2;
+    position: fixed;
+    width: 100%;
+    height: 12vh;
+    left: 0;
+    top: 0;
+    background-color: rgba(102, 102, 102, 0.476);
+    z-index: 2;
 }
 .main-components {
-  padding-top: 20vh;
+    padding-top: 20vh;
 }
 .login-btn {
     float: right;
-    padding:4vh 0;
+    padding: 4vh 0;
     margin-right: 2vw;
- 
 }
 .tutorial-btn {
     float: left;
-    padding:4vh 0;
+    padding: 4vh 0;
     margin-left: 2vw;
 }
 .logo img {
     margin-top: 2vh;
     width: 8vh;
     height: 8vh;
-
 }
 #google-logo {
     width: 2vh;
     height: 2vh;
     margin-right: 1vh;
-
 }
 
 .logo:hover {
@@ -130,4 +123,23 @@ body {
 
 .txt-btn {
     font-family: "Press Start 2P" !important;
+}
+
+.dropdown-menu {
+    position: absolute;
+    z-index: 1;
+    min-width: 160px;
+    padding: 12px 16px;
+}
+
+.dropdown-menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.dropdown-menu button {
+    display: block;
+    width: 100%;
+    text-align: left;
 }
