--- a/src/App.css
+++ b/src/App.css
@@ -35,35 +35,44 @@ body {
     background-color: rgba(102, 102, 102, 0.476);
     z-index: 2;
 }
+.side-bar {
+    height: 100%;
+    width: 20vh;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: rgba(74, 74, 74, 0.399);
+    overflow-x: hidden;
+    padding-top: 1vh;
+  }
+
+
 .main-components {
   padding-top: 6vh;
 }
 .login-btn {
-    float: right;
-    padding: 4vh 0;
-    margin-right: 2vw;
+    position: absolute;
+    left: 2vh;
+    padding:2vh 0;
 }
 .tutorial-btn {
-    float: left;
-    padding: 4vh 0;
-    margin-left: 2vw;
+    position: absolute;
+    bottom: 12vh;
+    left: 2vh;
 }
 .logo img {
-    margin-top: 2vh;
+    position: absolute;
+    left: 6vh;
+    bottom: 2vh;
     width: 8vh;
     height: 8vh;
+    
 }
 #google-logo {
     width: 2vh;
     height: 2vh;
     margin-right: 1vh;
-}
-
-.logo:hover {
-    filter: drop-shadow(0 0 2em #ef63c7aa);
-}
-.logo.react:hover {
-    filter: drop-shadow(0 0 2em #e747d5aa);
 }
 
 
@@ -140,8 +149,8 @@ body {
 .dropdown-menu {
     position: absolute;
     z-index: 1;
-    min-width: 160px;
-    padding: 12px 16px;
+    min-width: 100px;
+    padding: 0px 0px;
 }
 
 .dropdown-menu ul {
@@ -151,6 +160,7 @@ body {
 }
 
 .dropdown-menu button {
+    padding: 0.5vw 0.5;
     display: block;
     width: 100%;
     text-align: left;
