--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,13 @@ body {
     padding: 0;
 }
 
+button {
+    background-color: #edb1e2;
+}
+
 .window {
     border-radius: 2px;
-    background-color: #eddfed;
+    background-color: #edcbed;
 }
 /* Pink gradient for the window titles */
 .title-bar {
@@ -49,7 +53,7 @@ body {
 
 
 .main-components {
-  padding-top: 6vh;
+
 }
 .login-btn {
     position: absolute;
@@ -83,25 +87,23 @@ body {
 /* Matrix grid, please do not change height units */
 .grid {
     float: left;
-    width: 88vh;
-    height: 88vh;
-    margin-left: 5vw;
+    margin-left: 15vw;
 }
 .container {
     display: grid;
     grid-template-rows: repeat(64, 1fr);
     grid-template-columns: repeat(64, 1fr);
-    width: 85vh;
-    height: 85vh;
+    width: 90vh;
+    height: 90vh;
     margin-left: auto;
     margin-right: auto;
 }
 
 /* Colour palette */
 .colorPalette {
-    float: right;
+    float: left;
     margin-top: 10vw;
-    margin-right: 30vw;
+    margin-left: 5vw;
     width: 8vw;
     height: 30vw;
     z-index: 2;
