--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* --------------------------------------- General tags and HTML standard tags */
 :root {
     padding: 1rem;
     text-align: center;
@@ -16,80 +17,20 @@ body {
     margin: 0;
     padding: 0;
 }
-
-#loading {
-    width: 20vw;
-    padding: 30vh 0;
-}
-
 button {
     background-color: #edb1e2;
+    min-width: 0;
 }
-
-.window {
-    border-radius: 2px;
-    background-color: #edcbed;
-}
-/* Pink gradient for the window titles */
-.title-bar {
-    background: linear-gradient(90deg, #d929b8, #f79ee7);
-}
-
-.top-bar {
-    position: fixed;
-    width: 100%;
-    height: 12vh;
-    left: 0;
-    top: 0;
-    background-color: rgba(102, 102, 102, 0.476);
-    z-index: 2;
-}
-.side-bar {
-    height: 100%;
-    width: 20vh;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    background-color: rgba(74, 74, 74, 0.399);
-    overflow-x: hidden;
-    padding-top: 1vh;
-  }
-
-
-.main-components {
-
-}
-.login-btn {
-    position: absolute;
-    left: 2vh;
-    padding:2vh 0;
-}
-.tutorial-btn {
-    position: absolute;
-    bottom: 12vh;
-    left: 2vh;
-}
-.logo img {
-    position: absolute;
-    left: 6vh;
-    bottom: 2vh;
-    width: 8vh;
-    height: 8vh;
-    
-}
-#google-logo {
-    width: 2vh;
-    height: 2vh;
-    margin-right: 1vh;
-}
-
 
 .main {
     margin-left: 5vw;
 }
 
-/* Matrix grid, please do not change height units */
+.txt-btn {
+    font-family: "Press Start 2P" !important;
+}
+
+/* --------------------------------------- Matrix grid */
 .grid {
     float: left;
     margin-left: 15vw;
@@ -104,7 +45,21 @@ button {
     margin-right: auto;
 }
 
-/* Colour palette */
+/* A regular cell of the matrix grid */
+.grid-item {
+    border: 0.1vw solid #000000;
+}
+
+/* Selected cell will get a golden highlight */
+.chosen-item {
+    border: 1px solid rgb(138, 40, 150);
+    box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
+    position: relative;
+    z-index: 1;
+}
+
+/* --------------------------------------- Colour palette */
+
 .colorPalette {
     float: left;
     margin-top: 10vw;
@@ -131,33 +86,60 @@ button {
     border: 0.1vw solid #000000;
 }
 .colorPalette button {
+    width: 80%;
     margin-bottom: 1vw;
 }
 #submit-icon {
-    height: 2.3vh;
+    height: 2vh;
 }
 
-/* A regular cell of the matrix grid */
-.grid-item {
-    border: 0.1vw solid #000000;
+/* --------------------------------------- Side or top bar */
+
+.top-bar {
+    position: fixed;
+    width: 100%;
+    height: 12vh;
+    left: 0;
+    top: 0;
+    background-color: rgba(102, 102, 102, 0.476);
+    z-index: 2;
 }
-/* Selected cell will get a golden highlight */
-.chosen-item {
-    border: 1px solid rgb(138, 40, 150);
-    box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
-    position: relative;
-    z-index: 1;
+.side-bar {
+    height: 100%;
+    width: 20vh;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    background-color: rgba(74, 74, 74, 0.399);
+    overflow-x: hidden;
+    padding-top: 1vh;
+}
+.login-btn {
+    position: absolute;
+    left: 2vh;
+    padding:2vh 0;
+}
+.tutorial-btn {
+    position: absolute;
+    bottom: 12vh;
+    left: 2vh;
+}
+.logo img {
+    position: absolute;
+    left: 6vh;
+    bottom: 2vh;
+    width: 8vh;
+    height: 8vh;
+    
+}
+#google-logo {
+    width: 2vh;
+    height: 2vh;
+    margin-right: 1vh;
 }
 
-.member-chosen-item {
-  border: 1px solid rgb(138, 40, 150);
-  position: relative;
-  z-index: 1000;
-}
-
-.txt-btn {
-    font-family: "Press Start 2P" !important;
-}
+/* --------------------------------------- Dropdown menu */
 
 .dropdown-menu {
     position: absolute;
@@ -178,3 +160,33 @@ button {
     width: 100%;
     text-align: left;
 }
+
+/* --------------------------------------- 98.css changes */
+
+/* Main grey window base */
+.window {
+    border-radius: 2px;
+    background-color: #edcbed;
+}
+/* The colourful bar at the top of a window */
+.title-bar {
+    background: linear-gradient(90deg, #d929b8, #f79ee7);
+}
+
+/* --------------------------------------- Tutorial overlay changes */
+
+/* --------------------------------------- Other ID:s and classes */ 
+
+#loading {
+    width: 20vw;
+    padding: 30vh 0;
+}
+
+.member-chosen-item {
+  border: 1px solid rgb(138, 40, 150);
+  position: relative;
+  z-index: 1000;
+}
+
+
+
