--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,10 @@ html {
     padding: 0;
 }
 body {
-    background-image: url("assets/sky.jpg");
+    background-image: url("assets/backgr.png");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: right;
+    background-position: center center;
     background-color: rgb(61, 0, 46); 
     margin: 0;
     padding: 0;
@@ -134,8 +134,15 @@ button {
     width: 80%;
     margin-bottom: 1vw;
 }
-#submit-icon {
+#checkbox-icon {
     height: 2vh;
+}
+#cross-icon {
+    height: 2vh;
+}
+.checkbox-disabled {
+    background-color: silver;
+    box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
 }
 
 /* --------------------------------------- Side or top bar */
