feature:tutorial button
Tutorial button is hidden when the user is not logged in

--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,9 @@ button {
     height: 2vh;
     margin-right: 1vh;
 }
+.hidden {
+    display: none;
+}
 
 /* --------------------------------------- Dropdown menu */
 
