--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,12 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-color: rgb(61, 0, 46); 
+    background-color: rgb(235, 145, 213); 
     margin: 0;
     padding: 0;
+    clear: both;
+    height: 100vh;
+    overflow: hidden;
 }
 button {
     background-color: #edb1e2;
@@ -104,88 +107,171 @@ button {
     z-index: 2;
 }
 
+@media screen and (max-width: 1000px){
+    :root {
+        padding: 0;
+    }
+    .main {
+        margin: 0;
+    }
+    .grid {
+        margin: 0 2.5vw 0;
+        padding: 15vh 0;
+        float: none;
+    }
+    .container {
+        display: grid;
+        grid-template-rows: repeat(64, 1fr);
+        grid-template-columns: repeat(64, 1fr);
+        width: 90vw;
+        height: 90vw;
+    }
+}
+
 /* --------------------------------------- Colour palette */
 
-.colorPalette {
-    float: left;
-    margin-top: 10vw;
-    margin-left: 5vw;
-    width: 8vw;
-    height: 30vw;
-}
-.colorPalette .title-bar {
-    text-align: left;
-}
-.colorPalette-container {
-    display: grid;
-    grid-template-rows: repeat(8, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    width: 5vw;
-    height: 20vw;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2vw;
-    margin-bottom: 1vw;
-}
-.colorPalette-container .grid-item {
-    border: 0.1vw solid #000000;
-}
-.colorPalette button {
-    width: 80%;
-    margin-bottom: 1vw;
-}
-#checkbox-icon {
-    height: 2vh;
-}
-#cross-icon {
-    height: 2vh;
-}
 .checkbox-disabled {
     background-color: silver;
     box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
 }
 
+@media screen and (min-width: 1001px){
+    .colorPalette {
+        float: left;
+        margin-top: 10vw;
+        margin-left: 5vw;
+        width: 8vw;
+        height: 30vw;
+    }
+    .colorPalette .title-bar {
+        text-align: left;
+    }
+    .colorPalette-container {
+        display: grid;
+        grid-template-rows: repeat(8, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        width: 5vw;
+        height: 20vw;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2vw;
+        margin-bottom: 1vw;
+    }
+    .colorPalette-container .grid-item {
+        border: 0.1vw solid #000000;
+    }
+    .colorPalette button {
+        width: 80%;
+        margin-bottom: 1vw;
+    }
+    #checkbox-icon {
+        height: 2vh;
+    }
+    #cross-icon {
+        height: 2vh;
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .colorPalette {
+        position: fixed;
+        z-index: 2;
+        width: 85vw;
+        margin: 0 7.5vw 0;
+        bottom: 0;
+    }
+    .colorPalette .title-bar {
+        text-align: left;
+    }
+    .colorPalette-container {
+        float: left;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(8, 1fr);
+        width: 60vw;
+        height: 15vw;
+    }
+    .colorPalette button {
+        width: 15vw;
+        height: 6vw;
+        padding: 0;
+        margin-top: 0.5vw;
+        margin-left: 2vw;
+    }
+    #checkbox-icon {
+        height: 5vw;
+    }
+    #cross-icon {
+        height: 5vw;
+    }
+    .palette-clear {
+        clear: both;
+    }
+}
+
 /* --------------------------------------- Side or top bar */
 
-.top-bar {
-    position: fixed;
-    width: 100%;
-    height: 12vh;
-    left: 0;
-    top: 0;
-    background-color: rgba(102, 102, 102, 0.476);
-}
-.side-bar {
-    height: 100%;
-    width: 20vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(74, 74, 74, 0.399);
-    overflow-x: hidden;
-    padding-top: 1vh;
-}
-.login-btn {
-    position: absolute;
-    left: 2vh;
-    padding:2vh 0;
-}
-.tutorial-btn {
-    position: absolute;
-    bottom: 12vh;
-    left: 2vh;
-}
-.logo img {
-    position: absolute;
-    left: 6vh;
-    bottom: 2vh;
-    width: 8vh;
-    height: 8vh;
-}
 #google-logo {
     width: 2vh;
     height: 2vh;
     margin-right: 1vh;
+}
+
+@media screen and (min-width: 1001px){
+    .side-bar {
+        position: fixed;
+        height: 100%;
+        width: 20vh;
+        top: 0;
+        left: 0;
+        background-color: rgba(74, 74, 74, 0.399);
+        overflow-x: hidden;
+        padding-top: 1vh;
+    }
+    .login-btn {
+        position: absolute;
+        left: 2vh;
+        padding:2vh 0;
+    }
+    .tutorial-btn {
+        position: absolute;
+        bottom: 12vh;
+        left: 2vh;
+    }
+    .logo img {
+        position: absolute;
+        left: 6vh;
+        bottom: 2vh;
+        width: 8vh;
+        height: 8vh;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .side-bar{
+        position: fixed;
+        width: 100%;
+        height: 12vh;
+        left: 0;
+        top: 0;
+        background-color: rgba(102, 102, 102, 0.476);
+    }
+    .login-btn {
+        float: right;
+        padding: 4vh 0;
+        margin-right: 2vw;
+    }
+    .tutorial-btn {
+        float: left;
+        padding: 4vh 0;
+        margin-left: 2vw;
+    }
+    .logo img {
+        position: absolute;
+        margin: 2vw auto 0;
+        width: 8vh;
+        height: 8vh;
+    }
 }
 
 /* --------------------------------------- Dropdown menu */
