--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@ button {
     }
     .grid {
         margin: 0 2.5vw 0;
-        padding: 15vh 0;
+        padding: 15vh 0 0;
         float: none;
     }
     .container {
@@ -174,7 +174,7 @@ button {
 
 @media screen and (max-width: 1000px){
     .colorPalette {
-        position: fixed;
+        position: absolute;
         z-index: 2;
         width: 85vw;
         margin: 0 7.5vw 0;
@@ -249,7 +249,7 @@ button {
 
 @media screen and (max-width: 1000px) {
     .side-bar{
-        position: fixed;
+        position: absolute;
         width: 100%;
         height: 12vh;
         left: 0;
@@ -301,6 +301,12 @@ button {
 #loading {
     width: 20vw;
     padding: 30vh 0;
+}
+@media screen and (max-width: 1000px) {
+    #loading {
+        width: 90vw;
+        padding: 30vh 0;
+    }
 }
 
 .member-chosen-item {
