--- a/src/App.css
+++ b/src/App.css
@@ -1,227 +1,228 @@
 /* --------------------------------------- General tags and HTML standard tags */
 :root {
-    padding: 1rem;
-    text-align: center;
-    font-family: "Press Start 2P" !important;
+  padding: 1rem;
+  text-align: center;
+  font-family: "Press Start 2P" !important;
 }
 html {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-    background-image: url("assets/backgr.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-color: rgb(61, 0, 46); 
-    margin: 0;
-    padding: 0;
+  background-image: url("assets/backgr.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-color: rgb(61, 0, 46);
+  margin: 0;
+  padding: 0;
 }
 button {
-    background-color: #edb1e2;
-    min-width: 0;
-    font-family: "Press Start 2P" !important;
+  background-color: #edb1e2;
+  min-width: 0;
+  font-family: "Press Start 2P" !important;
 }
 
 .main {
-    margin-left: 5vw;
+  margin-left: 5vw;
 }
-
 
 /* --------------------------------------- 98.css changes */
 
 /* Main grey window base */
 .window {
-    border-radius: 2px;
-    background-color: #edcbed;
+  border-radius: 2px;
+  background-color: #edcbed;
 }
 /* The colourful bar at the top of a window */
 .title-bar {
-    background: linear-gradient(90deg, #d929b8, #f79ee7);
+  background: linear-gradient(90deg, #d929b8, #f79ee7);
 }
 
 /* --------------------------------------- Tutorial overlay changes */
 
 .introjs-tooltip {
-    border-radius: 0px;
+  border-radius: 0px;
 }
-.introjs-nextbutton, .introjs-prevbutton {
-    text-align: center;
-    border: none;
-    border-radius: 0;
-    box-sizing: border-box;
-    color: transparent;
-    min-height: 23px;
-    min-width: 75px;
-    padding: 0.5vw 12px;
-    text-shadow: 0 0 #222;
-    background: silver;
-    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey, inset 2px 2px #dfdfdf;
+.introjs-nextbutton,
+.introjs-prevbutton {
+  text-align: center;
+  border: none;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: transparent;
+  min-height: 23px;
+  min-width: 75px;
+  padding: 0.5vw 12px;
+  text-shadow: 0 0 #222;
+  background: silver;
+  box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey,
+    inset 2px 2px #dfdfdf;
 }
-.tutorial-card *{
-    border-radius: 0px;
-    background-color: #eddfed;
-    font-family: "Press Start 2P" !important;
+.tutorial-card * {
+  border-radius: 0px;
+  background-color: #eddfed;
+  font-family: "Press Start 2P" !important;
 }
 .tutorial-card .introjs-tooltip-header {
-    border-radius: 0px;
-    margin: 2px;
-    background: linear-gradient(90deg, #d929b8, #f79ee7);
+  border-radius: 0px;
+  margin: 2px;
+  background: linear-gradient(90deg, #d929b8, #f79ee7);
 }
 .tutorial-card .introjs-tooltip-title {
-    border-radius: 0px;
-    color: #ffffff;
-    font-size: 12px;
-    background: inherit;    
+  border-radius: 0px;
+  color: #ffffff;
+  font-size: 12px;
+  background: inherit;
 }
 .tutorial-card .introjs-skipbutton {
-    visibility: hidden;  
+  visibility: hidden;
 }
 
 /* --------------------------------------- Matrix grid */
 .grid {
-    float: left;
-    margin-left: 15vw;
+  float: left;
+  margin-left: 15vw;
 }
 .container {
-    display: grid;
-    grid-template-rows: repeat(64, 1fr);
-    grid-template-columns: repeat(64, 1fr);
-    width: 88vh;
-    height: 88vh;
+  display: grid;
+  grid-template-rows: repeat(64, 1fr);
+  grid-template-columns: repeat(64, 1fr);
+  width: 88vh;
+  height: 88vh;
 }
 
 /* A regular cell of the matrix grid */
 .grid-item {
-    border: 0.1vh solid #000000;
+  border: 0.1vh solid #000000;
 }
 
 /* Selected cell will get a golden highlight */
 .chosen-item {
-    border: 1px solid rgb(138, 40, 150);
-    box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
-    position: relative;
-    z-index: 2;
+  border: 1px solid rgb(138, 40, 150);
+  box-shadow: 1px 1px 8px 8px rgb(255, 238, 0);
+  position: relative;
+  z-index: 2;
 }
 
 /* --------------------------------------- Colour palette */
 
 .colorPalette {
-    float: left;
-    margin-top: 10vw;
-    margin-left: 5vw;
-    width: 8vw;
-    height: 30vw;
+  float: left;
+  margin-top: 10vw;
+  margin-left: 5vw;
+  width: 8vw;
+  height: 30vw;
 }
 .colorPalette .title-bar {
-    text-align: left;
+  text-align: left;
 }
 .colorPalette-container {
-    display: grid;
-    grid-template-rows: repeat(8, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    width: 5vw;
-    height: 20vw;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2vw;
-    margin-bottom: 1vw;
+  display: grid;
+  grid-template-rows: repeat(8, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  width: 5vw;
+  height: 20vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2vw;
+  margin-bottom: 1vw;
 }
 .colorPalette-container .grid-item {
-    border: 0.1vw solid #000000;
+  border: 0.1vw solid #000000;
 }
 .colorPalette button {
-    width: 80%;
-    margin-bottom: 1vw;
+  width: 80%;
+  margin-bottom: 1vw;
 }
 #checkbox-icon {
-    height: 2vh;
+  height: 2vh;
 }
 #cross-icon {
-    height: 2vh;
+  height: 2vh;
 }
 .checkbox-disabled {
-    background-color: silver;
-    box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
+  background-color: silver;
+  box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
 }
 
 /* --------------------------------------- Side or top bar */
 
 .top-bar {
-    position: fixed;
-    width: 100%;
-    height: 12vh;
-    left: 0;
-    top: 0;
-    background-color: rgba(102, 102, 102, 0.476);
+  position: fixed;
+  width: 100%;
+  height: 12vh;
+  left: 0;
+  top: 0;
+  background-color: rgba(102, 102, 102, 0.476);
 }
 .side-bar {
-    height: 100%;
-    width: 20vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(74, 74, 74, 0.399);
-    overflow-x: hidden;
-    padding-top: 1vh;
+  height: 100%;
+  width: 20vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(74, 74, 74, 0.399);
+  overflow-x: hidden;
+  padding-top: 1vh;
 }
 .login-btn {
-    position: absolute;
-    left: 2vh;
-    padding:2vh 0;
+  position: absolute;
+  left: 2vh;
+  padding: 2vh 0;
 }
 .tutorial-btn {
-    position: absolute;
-    bottom: 12vh;
-    left: 2vh;
+  position: absolute;
+  bottom: 12vh;
+  left: 2vh;
 }
 .logo img {
-    position: absolute;
-    left: 6vh;
-    bottom: 2vh;
-    width: 8vh;
-    height: 8vh;
+  position: absolute;
+  left: 6vh;
+  bottom: 2vh;
+  width: 8vh;
+  height: 8vh;
 }
 #google-logo {
-    width: 2vh;
-    height: 2vh;
-    margin-right: 1vh;
+  width: 2vh;
+  height: 2vh;
+  margin-right: 1vh;
 }
 .hidden {
-    display: none;
+  display: none;
 }
 
 /* --------------------------------------- Dropdown menu */
 
 .dropdown-menu {
-    position: absolute;
-    z-index: 1;
-    min-width: 100px;
-    padding: 0px 0px;
+  position: absolute;
+  z-index: 1;
+  min-width: 100px;
+  padding: 0px 0px;
 }
 
 .dropdown-menu ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .dropdown-menu button {
-    padding: 0.5vw 0.5;
-    display: block;
-    width: 100%;
-    text-align: left;
+  padding: 0.5vw 0.5;
+  display: block;
+  width: 100%;
+  text-align: left;
 }
 
-/* --------------------------------------- Other ID:s and classes */ 
+/* --------------------------------------- Other ID:s and classes */
 
 #loading {
-    width: 20vw;
-    padding: 30vh 0;
+  width: 20vw;
+  padding: 30vh 0;
 }
 
 .member-chosen-item {
-    border: 1px solid rgb(138, 40, 150);
-    position: relative;
-    z-index: 1;
+  border: 1px solid rgb(138, 40, 150);
+  position: relative;
+  z-index: 1;
 }
