--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ button {
 .grid {
     float: left;
     margin-left: 15vw;
+    margin-bottom: 5px;
 }
 .container {
     display: grid;
@@ -108,6 +109,9 @@ button {
 }
 
 @media screen and (max-width: 1000px){
+    body {
+        overflow: scroll;
+    }
     :root {
         padding: 0;
     }
@@ -125,6 +129,9 @@ button {
         grid-template-columns: repeat(64, 1fr);
         width: 90vw;
         height: 90vw;
+    }
+    .grid-item {
+        border: 0.1vw solid #000000;
     }
 }
 
@@ -174,10 +181,9 @@ button {
 
 @media screen and (max-width: 1000px){
     .colorPalette {
-        position: absolute;
         z-index: 2;
         width: 85vw;
-        margin: 0 7.5vw 0;
+        margin: 5vw 7.5vw 0;
         bottom: 0;
     }
     .colorPalette .title-bar {
@@ -313,4 +319,8 @@ button {
     border: 1px solid rgb(138, 40, 150);
     position: relative;
     z-index: 1;
+}
+
+.artist-tag {
+    font-family: "Press Start 2P" !important;
 }
