--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    background-color: rgb(235, 145, 213); 
+    background-color: rgb(235, 145, 213);
     margin: 0;
     padding: 0;
     clear: both;
@@ -29,7 +29,6 @@ button {
 .main {
     margin-left: 5vw;
 }
-
 
 /* --------------------------------------- 98.css changes */
 
@@ -48,7 +47,8 @@ button {
 .introjs-tooltip {
     border-radius: 0px;
 }
-.introjs-nextbutton, .introjs-prevbutton {
+.introjs-nextbutton,
+.introjs-prevbutton {
     text-align: center;
     border: none;
     border-radius: 0;
@@ -59,9 +59,10 @@ button {
     padding: 0.5vw 12px;
     text-shadow: 0 0 #222;
     background: silver;
-    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff, inset -2px -2px grey, inset 2px 2px #dfdfdf;
+    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #fff,
+        inset -2px -2px grey, inset 2px 2px #dfdfdf;
 }
-.tutorial-card *{
+.tutorial-card * {
     border-radius: 0px;
     background-color: #eddfed;
     font-family: "Press Start 2P" !important;
@@ -75,10 +76,10 @@ button {
     border-radius: 0px;
     color: #ffffff;
     font-size: 12px;
-    background: inherit;    
+    background: inherit;
 }
 .tutorial-card .introjs-skipbutton {
-    visibility: hidden;  
+    visibility: hidden;
 }
 
 /* --------------------------------------- Matrix grid */
@@ -108,7 +109,7 @@ button {
     z-index: 2;
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1000px) {
     body {
         overflow: scroll;
     }
@@ -142,7 +143,7 @@ button {
     box-shadow: inset -2px -2px #dfdfdf, inset 2px 2px #808080;
 }
 
-@media screen and (min-width: 1001px){
+@media screen and (min-width: 1001px) {
     .colorPalette {
         float: left;
         margin-top: 10vw;
@@ -179,7 +180,7 @@ button {
     }
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1000px) {
     .colorPalette {
         z-index: 2;
         width: 85vw;
@@ -223,7 +224,7 @@ button {
     margin-right: 1vh;
 }
 
-@media screen and (min-width: 1001px){
+@media screen and (min-width: 1001px) {
     .side-bar {
         position: fixed;
         height: 100%;
@@ -237,7 +238,7 @@ button {
     .login-btn {
         position: absolute;
         left: 2vh;
-        padding:2vh 0;
+        padding: 2vh 0;
     }
     .tutorial-btn {
         position: absolute;
@@ -254,7 +255,7 @@ button {
 }
 
 @media screen and (max-width: 1000px) {
-    .side-bar{
+    .side-bar {
         position: absolute;
         width: 100%;
         height: 12vh;
@@ -301,8 +302,26 @@ button {
     width: 100%;
     text-align: left;
 }
+@media screen and (max-width: 1000px) {
+    .dropdown-menu {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 32px !important;
+        padding: 32px 64px !important;
+    }
+}
+@media screen and (min-width: 1001px) {
+    .dropdown-menu {
+        position: absolute;
+        z-index: 1;
+        min-width: 100px;
+        padding: 0px 0px;
+    }
+}
 
-/* --------------------------------------- Other ID:s and classes */ 
+/* --------------------------------------- Other ID:s and classes */
 
 #loading {
     width: 20vw;
