hotfix: group list height
It is now responsive to the number of the members in a group. Also should not be over 70% of the screen

--- a/src/App.css
+++ b/src/App.css
@@ -372,7 +372,8 @@ display: none;
 
 @media screen and (max-width: 1000px){
   .right-sidebar {
-    height: 82%;
+    height: auto;
+    max-height: 70%;
     width: 100%;
     position: fixed;
     top: 0;
