--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,21 @@ button {
 .login-alert div{
   padding: 2vw 0;
 }
+@media screen and (max-width: 1000px) {
+  .login-alert{
+    height: 8vw;
+    width: 90vw;
+    color: #FFFFFF;
+    background-color: #ff34bfd9;
+    border-top: #000000 solid 2px;
+    border-bottom: #000000 solid 2px;
+    z-index: 5;
+    position: fixed;
+    margin-top: 45vw;
+    margin-left: 2vw;
+    font-family: "Press Start 2P";
+  }
+}
 
 /* --------------------------------------- 98.css changes */
 
@@ -129,8 +144,6 @@ button {
     position: relative;
     z-index: 1;
 }
-
-
 
 @media screen and (max-width: 1000px) {
   body {
@@ -261,6 +274,11 @@ button {
 .hidden {
 display: none;
 }
+#google-logo {
+  width: 2vh;
+  height: 2vh;
+  margin-right: 1vh;
+}
 
 @media screen and (min-width: 1001px) {
   .side-bar {
@@ -295,11 +313,7 @@ display: none;
     width: 8vh;
     height: 8vh;
   }
-  #google-logo {
-    width: 2vh;
-    height: 2vh;
-    margin-right: 1vh;
-  }
+  
 }
 
 @media screen and (max-width: 1000px) {
