bugfix: timer and new question in faq
Fixed the timer bug on the deployed website for people who saved timer before. Also added a question in FAQ about dark theme

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   text-align: center;
   cursor: url("assets/small-pink.png"), auto;
   font-family: "Press Start 2P" !important;
+  color-scheme: light;
 }
 html {
     margin: 0;
